@@ -1,4 +1,6 @@
 0.2.3
+2025-08-11
+* added example of non-estimable L matrix to ?waldx
 2025-08-10 9004
 * improved documentation for C_
 2025-08-09 9003
